@@ -7,47 +7,39 @@
     <x>0</x>
     <y>0</y>
     <width>392</width>
-    <height>220</height>
+    <height>262</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Record GIF</string>
+   <string>Record GIF/APNG</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <property name="sizeConstraint">
     <enum>QLayout::SetFixedSize</enum>
    </property>
-   <item row="1" column="0">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="label">
+   <item row="2" column="0">
+    <widget class="QRadioButton" name="fmtApng">
      <property name="text">
-      <string>Frameskip</string>
+      <string>APNG</string>
      </property>
+     <attribute name="buttonGroup">
+      <string notr="true">format</string>
+     </attribute>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="2">
     <widget class="QSpinBox" name="frameskip">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximum">
+      <number>9</number>
+     </property>
      <property name="value">
       <number>2</number>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="3">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Close</set>
      </property>
     </widget>
    </item>
@@ -123,8 +115,55 @@
      </item>
     </layout>
    </item>
+   <item row="2" column="1">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Frameskip</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="3">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Close</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QRadioButton" name="fmtGif">
+     <property name="text">
+      <string>GIF</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">format</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="2">
+    <widget class="QCheckBox" name="loop">
+     <property name="text">
+      <string>Loop</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>filename</tabstop>
+  <tabstop>start</tabstop>
+  <tabstop>stop</tabstop>
+  <tabstop>selectFile</tabstop>
+  <tabstop>fmtGif</tabstop>
+  <tabstop>fmtApng</tabstop>
+  <tabstop>loop</tabstop>
+  <tabstop>frameskip</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
@@ -144,4 +183,7 @@
    </hints>
   </connection>
  </connections>
+ <buttongroups>
+  <buttongroup name="format"/>
+ </buttongroups>
 </ui>
